Modal body no longer overlaps modal title

--- a/public/stylesheets/medic/medicStyles.less
+++ b/public/stylesheets/medic/medicStyles.less
@@ -1109,7 +1109,7 @@ body{
       height: 100%;
       position: relative;
       .modal-header{
-        height: 10%;
+        height: 80px;
       }
       .modal-body{
         position: absolute;
